k8s/app/overlays/stage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: infra-orch-web
  annotations:
    argocd.argoproj.io/ignore-healthcheck: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: infra-orch-stage.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: infra-orch-web
                port:
                  number: 80
